[package]
name = "sparsify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
zx = { package = "quizx", git = "https://github.com/Quantomatic/quizx.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.1.4", features = ["derive"] }

[[bin]]
name = "generate"
