[package]
name = "subgraph-cut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6"
metis = { path = "../metis-rs" }
quizx = { git = "https://github.com/Quantomatic/quizx.git" }
rand = "0.8.5"
petgraph-gen = "0.1.3"
roots = "0.0.8"
rs-graph = "0.20"
ordered-float = "3.4"
num = "0.3.1"
